ingress-practice/app.yml
apiVersion: v1
kind: Pod
metadata:
  name: application-pod
spec:
  containers:
    - name: app-container
      image: nikhil74/zomatoapp:v2   # -> using the image from docker hub
      ports:
        - containerPort: 3000        # -> exposing port 3000
---

apiVersion: v1
kind: Service
metadata:
  name: application-service
spec:
  type: NodePort
  selector:
    app: application-pod
  ports:
    - port: 3000
      targetPort: 3000

# => Here, depolying a sample nodejs zomato application.
# => listening to port '3000', path based routing.
# => created deployment and service for appication.
